<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/tony_stark_new" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/star_name"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/email"
        android:textColor="#800080"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/user_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_email"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/phone_number"
        android:textColor="#008080"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/user_phone_number"
        android:layout_margin="24dp"
        android:autofillHints="name"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnClickMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:background="#0091ea"
        android:text="@string/button_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>