<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgProfileImg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/tony_stark_new" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/imgProfileImg"
        android:padding="8dp"
        android:text="@string/star_name"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_toEndOf="@id/imgProfileImg"
        android:padding="8dp"
        android:text="@string/email"
        android:textColor="#800080"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/user_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_email"

        android:layout_toEndOf="@id/imgProfileImg"
        android:padding="8dp"
        android:text="@string/phone_number"
        android:textColor="#008080"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMoreInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgProfileImg"
        android:layout_marginStart="20dp"
        android:background="#1565c0"
        android:text="@string/button_text"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="#FF0000"
        android:text="@string/button_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>